fix page from jumping when scrollbar is present

--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,12 @@
   padding: 0;
 }
 
+/* This keeps page from jumping when scrollbar is present */
+html {
+  width: 100vw;
+  overflow-x: hidden;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
